works/envoyGateway/my-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: default # 建议与 nginx service 在同一命名空间
spec:
  parentRefs:
  - name: my-gateway  # 引用你之前创建成功的 Gateway 名称
    namespace: default 
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /      # 匹配所有路径
    backendRefs:
    - name: nginx     # 你的 Service 名称
      port: 80        # Service 的端口
